--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -245,9 +245,9 @@ p {
 
 table {
   font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
   width: 70%;
   margin-left: 15%;
+  border-collapse: collapse;
 }
 
 table td, table th {
@@ -256,8 +256,6 @@ table td, table th {
 }
 
 table tr:nth-child(even){background-color: #f2f2f2;}
-
-table tr:hover {background-color: #ddd;}
 
 table th {
   padding-top: 12px;
@@ -307,6 +305,30 @@ table tr {
 
 tfoot {
   background-color: #88201238;
+}
+
+tfoot tr:last-child td {
+  background-color: white;
+  border: 0px;
+  text-align: right;
+}
+
+#clear-cart {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding: 0.75rem 1rem;
+	border: 0;
+	border-radius: 0.317rem;
+	color: white;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 1rem;
+  line-height: 1.25;
+  background: linear-gradient(#7a7a7afd, #e4e4e4);
+}
+
+#clear-cart:hover{
+  background: linear-gradient(#908e8efd, #ffffff)
 }
 
 b {
