--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -121,14 +121,8 @@ p {
     text-shadow: 0px 1px;
 }
 
-/* b {
-    color: #aa665b;
-    font-family: "Verdana", sans-serif;
-    font-style: italic;
-    text-shadow: 0px 1px;
-} */
-
 #sub-category-select {
+    display: none;
     border-radius: 12px;
     border: 2px solid #2d9fd9;
     width: 7%;
@@ -145,20 +139,6 @@ p {
 * {
     box-sizing: border-box;
   }
-  
-/* Button used to open the contact form - fixed at the bottom of the page */
-#open-button, #log-out {
-    background-color: #37aab9;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.7;
-    position: fixed;
-    bottom: 23px;
-    right: 28px;
-    width: auto;
-}
   
 /* The popup form - hidden by default */
 .form-popup {
@@ -211,7 +191,7 @@ p {
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, #open-button:hover, #add-to-cart:hover {
+.form-container .btn:hover, #open-button:hover, #add-to-cart:hover, #log-out:hover{
   opacity: 1;
 }
 
@@ -227,16 +207,12 @@ p {
 #invalid_data {
     font-family: paragraphFont;
     font-weight: normal;
+    text-shadow: none;
     color: red;
 }
 
 #add-to-cart {
-    background-color: var(--blue);
-    color: white;
-    padding: 16px 20px;
-    font-size: medium;
-    border: none;
-    cursor: pointer;
+    background: var(--blue);
     opacity: 0.7;
     width: 100%;
     height: 50px;
@@ -261,8 +237,6 @@ table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  /* background: linear-gradient(rgb(167, 215, 235), #7ea9b0); */
-  /*background: linear-gradient(rgba(153, 153, 153, 0.507), rgba(115, 114, 114, 0.304));*/
   background: #882012;
   color: white;
 }
@@ -276,19 +250,9 @@ table tr {
   height: 60px;
 }
 
-#cart-section {
-    position: absolute;
-}
-
-#totalCartItems {
-    position: absolute;
-    top:10px;
-    left: 22px;
-}
-
 #loader {
     margin: auto;
-    margin-top: 10em;
+    margin-top: 15em;
     align-self: center;
     border: 5px solid #f3f3f3; /* Light grey */
     border-top: 5px solid #3498db; /* Blue */
@@ -316,14 +280,6 @@ tfoot tr:last-child td {
 #clear-cart {
   margin-top: 2em;
   margin-bottom: 2em;
-  padding: 0.75rem 1rem;
-	border: 0;
-	border-radius: 0.317rem;
-	color: white;
-	text-decoration: none;
-	font-weight: 700;
-	font-size: 1rem;
-  line-height: 1.25;
   background: linear-gradient(#7a7a7afd, #e4e4e4);
 }
 
@@ -359,4 +315,45 @@ b {
 
 #remove-item:hover, #add-item:hover {
   background-color: #ebf3f3;
+}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+#open-button, #log-out {
+  background: #9d2c1e;
+  opacity: 0.8;
+  top: 20px;
+  right: 28px;
+  position: absolute;
+}
+
+.btn {
+  padding: 0.75rem 1rem;
+	border: 0;
+	border-radius: 0.317rem;
+  color: white;
+  text-decoration: none;
+	font-weight: 700;
+	font-size: 1rem;
+  line-height: 1.25;
+  cursor: pointer;
+}
+
+#cart-container {
+  position: relative;
+  display: none;
+}
+
+.cart-number {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  position: absolute;
+  top: 0;
+  left: 45px;
 }
