--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -365,3 +365,67 @@ b {
   color: #882012;
   font-size: medium;
 }
+
+/*responsive design and media breaks*/
+
+#categories,
+#product-list,
+#cart{
+  margin-top: 3%;
+  display: grid;
+  grid-template-columns: 1fr;    
+  grid-gap: 40px 40px;
+  grid-auto-rows: max-content;
+}
+#cart h1{
+  grid-column: 1/2;   
+  grid-row: 1/2;
+}
+
+@media screen and (min-width: 768px) {
+ 
+  #categories,
+  #product-list,
+  #cart{
+    margin-top: 3%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;     
+    grid-gap: 40px 40px;
+    grid-auto-rows: max-content;
+  }
+
+  #cart-table{
+    grid-column: 1/3;   
+    grid-row: 2/3; 
+  }
+
+  #cart h1{
+    grid-column: 1/3;   
+    grid-row: 1/2;
+  }
+    
+}
+
+@media screen and (min-width: 992px) {
+ 
+  #categories,
+  #product-list,
+  #cart{
+    margin-top: 3%;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;     
+    grid-gap: 40px 40px;
+    grid-auto-rows: max-content;
+  }
+  
+
+#cart-table{
+    grid-column: 1/4;   
+    grid-row: 2/3; 
+  }
+
+  #cart h1{
+    grid-column: 2/3;   
+    grid-row: 1/2;
+  }
+} 
