--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -382,6 +382,11 @@ b {
   grid-row: 1/2;
 }
 
+#cart-error{
+  grid-column: 1/2;   
+  grid-row: 2/3;
+}
+
 @media screen and (min-width: 768px) {
  
   #categories,
@@ -402,6 +407,11 @@ b {
   #cart h1{
     grid-column: 1/3;   
     grid-row: 1/2;
+  }
+
+  #cart-error{
+    grid-column: 1/3;   
+    grid-row: 2/3;
   }
     
 }
@@ -428,4 +438,10 @@ b {
     grid-column: 2/3;   
     grid-row: 1/2;
   }
+
+  #cart-error{
+    grid-column: 2/3;   
+    grid-row: 2/3;
+  }
+
 } 
