--- a/WikiShop/public/css/style.css
+++ b/WikiShop/public/css/style.css
@@ -387,6 +387,11 @@ b {
   grid-row: 2/3;
 }
 
+#loader{
+  grid-column: 1/2;   
+  grid-row: 1/2;
+}
+
 @media screen and (min-width: 768px) {
  
   #categories,
@@ -412,6 +417,11 @@ b {
   #cart-error{
     grid-column: 1/3;   
     grid-row: 2/3;
+  }
+
+  #loader{
+    grid-column: 1/3;   
+    grid-row: 1/2;
   }
     
 }
@@ -442,6 +452,11 @@ b {
   #cart-error{
     grid-column: 2/3;   
     grid-row: 2/3;
+  }
+  
+  #loader{
+    grid-column: 2/3;   
+    grid-row: 1/3;
   }
 
 } 
